--- a/motor-shop/cart.html
+++ b/motor-shop/cart.html
@@ -44,8 +44,9 @@
                                 <a class="nav-link" href="product-detail.html">Sản phẩm</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Liên hệ</a>
+                                <a class="nav-link" href="contact.html">Liên hệ</a>
                             </li>
+                             <li class="nav-item"><a class="nav-link " href="favourite.html">Yêu Thích</a></li>
                         </ul>
                         <div class="d-flex">
                             <form class="d-flex me-2">
