--- a/motor-shop/favourite.html
+++ b/motor-shop/favourite.html
@@ -44,7 +44,6 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white py-5">
-      <!-- Nội dung footer -->
     </footer>
   </div>
 
@@ -63,7 +62,7 @@
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Trang chủ</a></li>
                             <li class="nav-item"><a class="nav-link" href="product-detail.html">Sản phẩm</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Liên hệ</a></li>
                             <li class="nav-item"><a class="nav-link active" href="favourite.html">Yêu Thích</a></li>
                         </ul>
                         <div class="d-flex">
