--- a/motor-shop/index.html
+++ b/motor-shop/index.html
@@ -64,7 +64,7 @@
                                 <a class="nav-link" href="product-detail.html">Sản phẩm</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Liên hệ</a>
+                                <a class="nav-link" href="contact.html">Liên hệ</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="favourite.html" >Yêu Thích</a></li>
