update admin product

--- a/motor-shop/admin.html
+++ b/motor-shop/admin.html
@@ -131,21 +131,21 @@
                         <i class="fas fa-motorcycle"></i> Sản phẩm
                     </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="#customers-tab-pane" class="nav-link sidebar-link" id="customers-tab" data-bs-toggle="tab" data-bs-target="#customers-tab-pane" role="tab" aria-controls="customers-tab-pane" aria-selected="false">
                         <i class="fas fa-users"></i> Khách hàng
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a href="#promotions-tab-pane" class="nav-link sidebar-link" id="promotions-tab" data-bs-toggle="tab" data-bs-target="#promotions-tab-pane" role="tab" aria-controls="promotions-tab-pane" aria-selected="false">
                         <i class="fas fa-tags"></i> Khuyến mãi
                     </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="#posts-tab-pane" class="nav-link sidebar-link" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts-tab-pane" role="tab" aria-controls="posts-tab-pane" aria-selected="false">
                         <i class="fas fa-newspaper"></i> Bài viết
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a href="#settings-tab-pane" class="nav-link sidebar-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings-tab-pane" role="tab" aria-controls="settings-tab-pane" aria-selected="false">
                         <i class="fas fa-cog"></i> Cài đặt
